--- a/pages/company-list.html
+++ b/pages/company-list.html
@@ -75,8 +75,8 @@
                             </div>
                         </div>
                         <div class="content-card p-3 text-worksans-l fs-14">
-                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
-                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/gps.png" alt="">4 vị trí đang tuyển</p>
                         </div>
                     </div>
                 </div>
@@ -92,8 +92,8 @@
                             </div>
                         </div>
                         <div class="content-card p-3 text-worksans-l fs-14">
-                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
-                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/gps.png" alt="">4 vị trí đang tuyển</p>
                         </div>
                     </div>
                 </div>
@@ -109,8 +109,8 @@
                             </div>
                         </div>
                         <div class="content-card p-3 text-worksans-l fs-14">
-                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
-                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/gps.png" alt="">4 vị trí đang tuyển</p>
                         </div>
                     </div>
                 </div>
@@ -126,8 +126,8 @@
                             </div>
                         </div>
                         <div class="content-card p-3 text-worksans-l fs-14">
-                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
-                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/gps.png" alt="">4 vị trí đang tuyển</p>
                         </div>
                     </div>
                 </div>
@@ -143,8 +143,8 @@
                             </div>
                         </div>
                         <div class="content-card p-3 text-worksans-l fs-14">
-                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
-                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/gps.png" alt="">4 vị trí đang tuyển</p>
                         </div>
                     </div>
                 </div>
@@ -160,8 +160,8 @@
                             </div>
                         </div>
                         <div class="content-card p-3 text-worksans-l fs-14">
-                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
-                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/gps.png" alt="">4 vị trí đang tuyển</p>
                         </div>
                     </div>
                 </div>
@@ -177,8 +177,8 @@
                             </div>
                         </div>
                         <div class="content-card p-3 text-worksans-l fs-14">
-                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
-                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/gps.png" alt="">4 vị trí đang tuyển</p>
                         </div>
                     </div>
                 </div>
@@ -194,8 +194,8 @@
                             </div>
                         </div>
                         <div class="content-card p-3 text-worksans-l fs-14">
-                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
-                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/gps.png" alt="">4 vị trí đang tuyển</p>
                         </div>
                     </div>
                 </div>
