--- a/pages/list-job.html
+++ b/pages/list-job.html
@@ -216,7 +216,7 @@
                         <div class="job-card">
                             <div class="title-card d-flex">
                                 <div class="img-company">
-                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                    <img class="w-100" src="../assets/imagefpt-software-tuyen.png" alt="">
                                 </div>
                                 <div class="title-post ms-3 col-8">
                                     <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
@@ -227,14 +227,14 @@
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
                             </div>
                             <div class="time-post px-3 text-worksans-l">
-                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
                             </div>
                             <div class="quantity-apply p-3">
-                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
                             </div>
                         </div>
                         
@@ -243,7 +243,7 @@
                         <div class="job-card">
                             <div class="title-card d-flex">
                                 <div class="img-company">
-                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
                                 </div>
                                 <div class="title-post ms-3 col-8">
                                     <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
@@ -254,14 +254,14 @@
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
                             </div>
                             <div class="time-post px-3 text-worksans-l">
-                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
                             </div>
                             <div class="quantity-apply p-3">
-                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
                             </div>
                         </div>   
                     </div>
@@ -269,7 +269,7 @@
                         <div class="job-card">
                             <div class="title-card d-flex">
                                 <div class="img-company">
-                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
                                 </div>
                                 <div class="title-post ms-3 col-8">
                                     <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
@@ -280,14 +280,14 @@
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
                             </div>
                             <div class="time-post px-3 text-worksans-l">
-                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
                             </div>
                             <div class="quantity-apply p-3">
-                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
                             </div>
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                         <div class="job-card">
                             <div class="title-card d-flex">
                                 <div class="img-company">
-                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
                                 </div>
                                 <div class="title-post ms-3 col-8">
                                     <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
@@ -306,14 +306,14 @@
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
                             </div>
                             <div class="time-post px-3 text-worksans-l">
-                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
                             </div>
                             <div class="quantity-apply p-3">
-                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
                             </div>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                         <div class="job-card">
                             <div class="title-card d-flex">
                                 <div class="img-company">
-                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
                                 </div>
                                 <div class="title-post ms-3 col-8">
                                     <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
@@ -332,14 +332,14 @@
                                 </div>
                             </div>
                             <div class="content-post p-3 text-worksans-l fs-14">
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
-                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
                             </div>
                             <div class="time-post px-3 text-worksans-l">
-                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
                             </div>
                             <div class="quantity-apply p-3">
-                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
                             </div>
                         </div>
                     </div>
