add new folder employer to store pages about hr

--- a/pages/hello.html
+++ b/pages/hello.html
@@ -25,7 +25,7 @@
                     <p class="name text-white mb-0 fs-5">The Wall</p>
                 </div>
                 <div class="icon-menu col-2 align-items-center ">
-                    <img src="../assets/image/menu(1).png" alt="">
+                    <img src="../assets/image/menu.png" alt="">
                 </div>
                 <div class="nav d-md-flex col-md-10 col-9 row justify-content-between align-items-center">
                     <div class="icon-close">
