--- a/pages/employer/profile.html
+++ b/pages/employer/profile.html
@@ -4,10 +4,10 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+
+      <title>Thông tin công ty</title>
 </head>
 <body>
-      <h1>Welcome to The Wall</h1>
-      <a href="./pages/hello.html" alt="">Click to redirect</a>
+      
 </body>
 </html>
