remove some classes

--- a/pages/employer/profile.html
+++ b/pages/employer/profile.html
@@ -6,8 +6,24 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <title>Thông tin công ty</title>
+
+      <meta content="" name="description">
+      <meta content="" name="keywords">
+
+      <!-- Favicons -->
+      <link rel="shortcut icon" type="image/x-icon" href="../../assets/favicon/favicon.ico"/>
+
+      <!-- Vendor CSS Files -->
+      <link href="../../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap-utilities.min.css" rel="stylesheet">
+      
+      <!-- Template CSS Files -->
+      <link href="../../assets/style/typography.css" rel="stylesheet">
+      <link 
 </head>
 <body>
-      
+      <!-- =============== Header =============== -->
+      <header class="container postion-fixed top-0 w-100">
+
+      </header>
 </body>
 </html>
