--- a/pages/hello.html
+++ b/pages/hello.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
-    <!------------HEADER------------------>
+    <!-- =============== HEADER =============== -->
     <header class="bg-web position-fixed top-0 w-100">
         <div class="container ">
             <div class=" header d-flex row justify-content-between ">
