code profile page of company

--- a/pages/hello.html
+++ b/pages/hello.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../assets/style/base.css">
     <link rel="stylesheet" href="../assets/style/header.css">
     <link rel="stylesheet" href="../assets/style/footer.css">
+    <link rel="stylesheet" href="../assets/style/typography.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
@@ -51,7 +52,7 @@
         </div>
     </header>
     <!------------END HEADER------------------>
-    <div id="content" class="text-noto-re pt-5">
+    <div id="content" class="text-NotoSans-Regular pt-5">
         <div class="container">
             <div class="my-5 px-md-0 px-4 search d-flex row justify-content-between gy-3">
                 <div class="search-job p-1 col-md-5 col-12">
