--- a/pages/employer/profile.html
+++ b/pages/employer/profile.html
@@ -18,12 +18,43 @@
       
       <!-- Template CSS Files -->
       <link href="../../assets/style/typography.css" rel="stylesheet">
-      <link 
+      <link href="../../assets/style/base.css" rel="stylesheet">
+      <link href="../../assets/style/header.css" rel="stylesheet">
+      <link href="../../assets/style/footer.css" rel="stylesheet">
 </head>
 <body>
       <!-- =============== Header =============== -->
-      <header class="container postion-fixed top-0 w-100">
+      <header class="container-fluid bg-web">
+            <div class="row d-flex align-items-center py-2 mx-120">
+                  <a class="d-flex align-items-center text-decoration-none">
+                        <img src="../../assets/image/logo.png" alt="Logo The Wall" width="45" height="45">
+                        <span class="text-white font-NotoSans-Bold ms-2" style="font-size: 16pt;">
+                              The Wall
+                              <span class="font-NotoSans-Regular d-block" style="font-size: 10pt;">
+                                    for Employers
+                              </span>
+                        </span>
+                  </a>
 
+                  <button class="d-lg-none d-block" type="button"> 
+                        <img src="../../assets/image/menu.png" alt="">
+                  </button>
+                  
+                  <div class="">
+
+                  </div>
+            </div>
       </header>
+      <!-- End Header -->
+      <!-- =============== Main Content =============== -->
+      <div class="main">
+
+      </div>
+
+      <!-- Vendor Script Files -->
+      <script src="../../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js" type="text/script"></script>
+
+      <!-- Main Script Files -->
+
 </body>
 </html>
