add new vendor icofont

--- a/pages/employer/profile.html
+++ b/pages/employer/profile.html
@@ -25,10 +25,10 @@
 <body>
       <!-- =============== Header =============== -->
       <header class="container-fluid bg-web">
-            <div class="row d-flex align-items-center py-2 mx-120">
+            <div class="row d-flex align-items-center py-2 mx-120 text-white">
                   <a class="d-flex align-items-center text-decoration-none">
-                        <img src="../../assets/image/logo.png" alt="Logo The Wall" width="45" height="45">
-                        <span class="text-white font-NotoSans-Bold ms-2" style="font-size: 16pt;">
+                        <img src="../../assets/image/logo.png" alt="Logo The Wall" width="40px" height="40px">
+                        <span class="font-NotoSans-Bold ms-2" style="font-size: 16pt;">
                               The Wall
                               <span class="font-NotoSans-Regular d-block" style="font-size: 10pt;">
                                     for Employers
@@ -40,8 +40,24 @@
                         <img src="../../assets/image/menu.png" alt="">
                   </button>
                   
-                  <div class="">
-
+                  <div class="d-flex align-items-center ms-120 font-NotoSans-Regular">
+                        <div class="text-uppercase">
+                              <a href="#">Bảng thông tin</a>
+                              <a href="#" class="ms-40">Quản lý ứng viên</a>
+                              <a href="#" class="ms-40">Quản lý đăng tuyển</a>
+                        </div>
+                        <div class="d-flex align-items-center ms-120">
+                              <div>
+                                  <img src="../../assets/image/bell.png" alt="Notification" style="width:20px; height:20px;">  
+                              </div>
+                              <div class="ms-40 d-flex align-items-center">
+                                    <img src="../../assets/image/horror.png" width="40px" height="40px">
+                                    <span class="ms-2 font-NotoSans-Bold">Minh</span>
+                                    <span class="ms-1">
+                                          
+                                    </span>
+                              </div>
+                        </div>
                   </div>
             </div>
       </header>
