--- a/pages/employer/profile.html
+++ b/pages/employer/profile.html
@@ -26,8 +26,8 @@
 </head>
 <body>
       <!-- =============== Header =============== -->
-      <header class="container-fluid bg-web">
-            <div class="row d-flex align-items-center py-2 mx-120 text-white">
+      <header class="container-fluid px-0 bg-web">
+            <div class="d-flex align-items-center py-2 mx-120 text-white">
                   <a class="d-flex align-items-center text-decoration-none">
                         <img src="../../assets/image/logo.png" alt="Logo The Wall" width="40px" height="40px">
                         <span class="font-NotoSans-Bold ms-2" style="font-size: 14pt;">
@@ -113,15 +113,15 @@
       </div>
 
       <!-- =============== Footer ================ -->
-      <footer class="container-fluid bg-web">
+      <footer class="container-fluid px-0 bg-web">
             <div class="row mx-120 py-5 text-white">
-                  <div class="col-md-4 col-12 pe-4">
+                  <div class="col-md-4 col-12 pe-5">
                         <div class="box-logo">
                               <img class="img-fluid" src="../../assets/image/main-logo.png" alt="">
                         </div>
 
                         <div class="mt-3">
-                              <p class="fs-14 font-WorkSans-Regular text-justify">
+                              <p class="font-WorkSans-Regular text-justify">
                                     The Wall là nền tảng tuyển dụng và phát triển sự nghiệp hàng đầu Châu Á dành cho các tài năng trẻ. 
                                     Sứ mệnh của The Wall là giúp người trẻ khám phá và theo đuổi đam mê nghề nghiệp.
                               </p>
@@ -152,12 +152,18 @@
                         </div>
                   </div>
 
-                  <div class="col-md-4 col-12 site-linking ps-4">
+                  <div class="col-md-4 col-12 ps-5">
                         <p class="fs-6 font-NotoSans-Bold">CÁC TRANG LIÊN KẾT</p>
-                        <ul class="list-unstyled">
-                            <li><a href="">Cơ hội việc làm</a></li>
-                            <li><a href="">Danh sách công ty</a></li>
-                            <li><a href="">Vị trí ứng tuyển</a></li>
+                        <ul class="list-unstyled text-decoration-none font-WorkSans-Regular">
+                              <li>
+                                    <a href="">Cơ hội việc làm</a>
+                              </li>
+                              <li class="mt-3">
+                                    <a href="">Danh sách công ty</a>
+                              </li>
+                              <li class="mt-3">
+                                    <a href="">Vị trí ứng tuyển</a>
+                              </li>
                         </ul>
                   </div>
             </div>
